# wlcpp

./: CMakeLists.txt  README.md  download_run.sh  sep_distr.out.txt  sep_distr.txt  show.py
include/: crtu64t.hpp  explain.hpp  gadgets.hpp  graphops.hpp  homcounts.hpp  logic.hpp  read_g6.hpp  read_labeled_txt.hpp  read_tree_txt.hpp  ref_generator.hpp  unlabelled_graph.hpp  wl.hpp
src/: CMakeLists.txt  complex_approx.cpp  disjointpaths.cpp  freetypes.cpp  genevalformulas.cpp  hom2logic.cpp  interp.cpp  justpaths.cpp  main.cpp  main_faster.cpp  minorops.cpp  print_graphs.cpp  tables.cpp  test_logic.cpp  wl_main.cpp
test/: CMakeLists.txt  wl_test.cpp
