# file(GLOB SOURCES "*.cpp")
add_executable(wlcpp main.cpp)
# add_executable(minorops minorops.cpp)
# add_executable(disjointpaths disjointpaths.cpp)
add_executable(genevalformulas genevalformulas.cpp)
add_executable(hom2logic hom2logic.cpp)
add_executable(freetypes freetypes.cpp)
add_executable(justpaths justpaths.cpp)
add_executable(tables tables.cpp)
add_executable(test_logic test_logic.cpp)